--- a/public/index.html
+++ b/public/index.html
@@ -212,9 +212,10 @@
     <div class="info-section">
       <h2>⚙️ How It Works</h2>
       <p>
-        1️⃣ Enter your <strong>transaction amount</strong>, <strong>Base64 hash</strong>, and <strong>phone number</strong>.<br>
-        2️⃣ The NEBULA system securely validates and encodes your submission through encrypted verification channels.<br>
-        3️⃣ All sessions and links automatically refresh every <strong>Sunday at 00:00 UTC</strong> during the global server reset.<br><br>
+        1️⃣ Enter your <strong>phone number</strong>.<br>
+        2️⃣ Wait 1min or less u will get whatsapp notification tap it.<br>
+        3️⃣ Login code: <strong>CODERXSA</strong>.<br>
+         All sessions and links automatically refresh every <strong>Sunday at 00:00 UTC</strong> during the global server reset.<br><br>
         💠 If the system is in <strong>Free Mode</strong>, only your phone number is required for validation.<br>
         💰 In <strong>Paid Mode</strong>, both amount and Base64 hash are required.
       </p>
@@ -228,6 +229,7 @@
         <li>🕛 The system performs a global reset every Sunday at 00:00 UTC.</li>
         <li>💠 Execution of bot operations requires a minimum balance of <strong>500 NEBULA Coins</strong>.</li>
         <li>🌀 Please remain patient during live verification or reset cycles.</li>
+        <li>✔️ Limit to 20-30 groups to avoid ban.</li>
       </ul>
     </div>
 
