--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
   <canvas id="particles"></canvas>
 
   <div class="box">
-    <h1>🚀 NEBULA HOST | Link System</h1>
+    <h1>🚀 NEBULA HOST</h1>
 
     <div id="paidFields">
       <label for="amount">Amount:</label>
@@ -518,3 +518,4 @@
 </body>
 
 </html>
+
